--- a/racing.html
+++ b/racing.html
@@ -183,7 +183,6 @@
                 <div class="winner-two">
                     <i class="fa-solid fa-medal trophy-two"></i>
                     <h3>1<sup>st</sup><br>2:08<br><span id="course-rec-two">Course Record</span></h3>
-            
                 </div>
             </a>
            <div class="img-thumbnail-right"></div>
@@ -196,16 +195,26 @@
                     <li>Rugged, steep trails</li>
                 </ul>
         </div>
-        <div class="info-packet">
-            <a href="https://www.patoutrailsaintlary.com/fr/les-courses/le-marathon" target="_blank"><div class="border-class"></div></a>
+        <div class="info-packet patou-skyrace">
+
+
+            <a href="https://www.patoutrailsaintlary.com/fr/les-courses/le-marathon" target="_blank">
+                <div class="winner-three">
+                    <i class="fa-solid fa-medal trophy-three"></i>
+                    <h3>2<sup>nd</sup><br>2:31<br></h3>
+                </div>
+            
+            </a>
+
+
             <div class="img-thumbnail-three"></div>
-            <h2 class="trail-name">Patou Marathon</h2>
-            <h4>42km + 3200m D+</h4>
+            <h2 class="trail-name">Patou Skyrace</h2>
+            <h4>22km + 2200m D+</h4>
             <ul>
                 <li>June 18</li>
                 <li>Saint Lary Soulan</li>
                 <li>French Pyrenees</li>
-                <li>Test piece mountain marathon</li>
+                <li>Mercilous ascent</li>
             </ul>
         </div>
         <div class="info-packet">
