revamped racing page, fully responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="hero-nav">
         <ul>
-            <li class="home-nav"><a class="sub-header test-link" href="/racing.html">RACING</a></li>
+            <li class="home-nav"><a class="sub-header test-link" href="/RacingMF.html">RACING</a></li>
             <li class="home-nav"><a class="sub-header" href="/Philosophy.html">PHILOSOPHY</a></li>
             <!-- <li class="home-nav"><a class="sub-header" href="#">PRESS</a></li> -->
             <li class="home-nav"><a class="sub-header" href="/contact.html">CONTACT</a></li>
