--- a/RacingMF.html
+++ b/RacingMF.html
@@ -20,9 +20,9 @@
         <i class="fa-solid fa-bars nav-toggle"></i>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Philosophy</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                <li class="nav__item"><a href="/index.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/Philosophy.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
             </ul>
         </nav>
         <div class="container header-container">
