--- a/Philosophy.html
+++ b/Philosophy.html
@@ -38,7 +38,7 @@
         </svg>
     </div>
     <nav>
-        <a class="animate-link" href="./index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp; HOME</a>
+        <a class="animate-link" href="./home.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp; HOME</a>
     </nav>
     <div class="typo-animation-container">
         <h1><span class="hide-text">philosophy</span></h1>
