--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </div> -->
     <nav>
         <ul>
-            <li><a class="animate-link" href="./index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp HOME</a>
+            <li><a class="animate-link" href="./home.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp HOME</a>
             </li>
         </ul>
     </nav>
