--- a/RacingMF.html
+++ b/RacingMF.html
@@ -20,7 +20,7 @@
         <i class="fa-solid fa-bars nav-toggle"></i>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="/index.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/Philosophy.html" class="nav__link">Philosophy</a></li>
                 <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
             </ul>
@@ -31,7 +31,9 @@
                 <img class="bigorre-tiger" src="./imgsBw/racing/drapeauBigorre.svg">
             </div>
         
-        <h1 class="header-title">Race<br>Calendar<br><span class="closer-letters">2022</span></h1>
+        <div class="typography-container">
+            <h1 class="header-title">Race<br>Calendar<br><span class="closer-letters">2022</span></h1>
+        </div>
         </div>
     </header>
     <div class="race-card-wrapper">
