new philosophy page

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -29,7 +30,7 @@
                         <a href="/RacingMF.html" class="nav__link">racing</a></li>
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
-                        <a href="/Philosophy.html" class="nav__link">Philosophy</a></li>
+                        <a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
                     <li class="nav__item">
                     <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
                         <a href="/contact.html" class="nav__link">Contact</a></li>
