--- a/RacingMF.html
+++ b/RacingMF.html
@@ -21,7 +21,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/Philosophy.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
                 <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
             </ul>
         </nav>
