--- a/philosophyMF.html
+++ b/philosophyMF.html
@@ -19,7 +19,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="/Philosophy.html" class="nav__link">Philosophy</a></li>
+            <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
             <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
         </ul>
     </nav>
@@ -31,9 +31,9 @@
         </div>
     </header>
     <section class="section-one container col-right">
-        <p class="section-one-content">Because velocity begs and my blood boils with stagnation, I run because I must. I run for the joy and suffering of it,
-        for the rebellion against space vast and gravity thick. I run for a closeness with the natural world and an instinct
-        going all the way back. In the face of all the world's whizzing, running remains the simplest expression of my being.</p>
+        <p class="section-one-content">Because velocity begs and my blood boils with stagnation, I run because I must. I run for the joy and toil of it,
+        for the battle with space vast and gravity thick. I run for a flushness with the natural world and an instinct
+        going all the way back. In the face of all the world's whizzing, running is the truest expression of my being.</p>
         <img class="small-img tashi-img" src="/images/tashilabstatall.jpg" alt="himalayan snowy pass">
     </section>
     </div>
