new contact page

--- a/philosophyMF.html
+++ b/philosophyMF.html
@@ -20,7 +20,7 @@
         <ul class="nav__list">
             <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
-            <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
+            <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
         </ul>
     </nav>
     <div class="page-wrapper">
