--- a/RacingMF.html
+++ b/RacingMF.html
@@ -22,7 +22,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
-                <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
+                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
             </ul>
         </nav>
         <div class="container header-container">
@@ -211,14 +211,9 @@
         </div>
         <div class="race-text">
         <div class="race-header">
-            <h2>Open to More...</h2>
-            <h3 class="stats-contact">Ideas<br>Inquiries<br>Invitations<br> Welcome</h3>
-        </div>
-        <div class="race-details-contact">
-            <ul>
-                <li>bdhiman244@gmail.com</li>
-                <li><a class="race-details__link" href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i></a></li>
-            </ul>
+            <h2>Awake to Opportunity...</h2>
+            <h3 class="stats-contact">Ideas<br>Inquiries<br>Invitations<br> Welcome<br><a class="contact__link" href="/contactMF.html"><br>Contact</a></h3>
+          
         </div>
         </div>
     </section>
