--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                         <a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
                     <li class="nav__item">
                     <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
-                        <a href="/contact.html" class="nav__link">Contact</a></li>
+                        <a href="/contactMF.html" class="nav__link">Contact</a></li>
                 </ul>
             </nav>
     </div>
