--- a/RacingMF.html
+++ b/RacingMF.html
@@ -22,6 +22,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
             </ul>
         </nav>
@@ -211,7 +212,6 @@
         </div>
         <div class="race-text">
         <div class="race-header">
-            <h2>Awake to Opportunity...</h2>
             <h3 class="stats-contact">Ideas<br>Inquiries<br>Invitations<br> Welcome<br><a class="contact__link" href="/contactMF.html"><br>Contact</a></h3>
           
         </div>
