--- a/contactMF.html
+++ b/contactMF.html
@@ -22,11 +22,11 @@
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                  <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
                  <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Philosophy</a></li>
+                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
              </ul>
         </nav>
     </header>
     <div class="shrink-wrap">
-       
         <section class="title-section container col-one">
             <h1 class="title-text">Cont<br>act.</h1>
             <img class="small-img teton-img" src="/imgsBw/tetonselfieBW.jpg" alt="Summit photo from the Grand Teton">
