--- a/RacingMF.html
+++ b/RacingMF.html
@@ -125,7 +125,9 @@
         <img class="race-pic" src="./imgsBw/racing/ossauNewBWThumb.jpg" alt="Lake with Mountains">
         <div class="results-box">
             <ul class="results-list">
-                <li class="results-next-race">NEXT RACE</li>
+                <li class="results-list__item"><i class="fa-solid fa-trophy trophy-icon"></i>&nbsp;1<sup class="sup">st</sup>
+                </li>
+                <li class="results-list__item"><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp; 8:30</li>
             </ul>
         </div>
         </div>
@@ -149,6 +151,11 @@
     <section class="race-one container">
         <div class="img-box df">
         <img class="race-pic" src="./imgsBw/racing/gabizosBWthumb.jpg" alt="Lake with Mountains">
+        <div class="results-box">
+            <ul class="results-list">
+                <li class="results-next-race">NEXT RACE</li>
+            </ul>
+        </div>
         </div>
         <div class="race-text">
         <div class="race-header">
