--- a/Results.html
+++ b/Results.html
@@ -34,6 +34,7 @@
         <ul class="results__list">
             <li class="list__title">Races</li>
             <li class="results-list__year">2022</li>
+            <li class="results-list__item"><span class="race-title">GTVO</span><br>(74km 4600m d+) 8:30 --1<sup class="sup">st</sup></li>
             <li class="results-list__item"><span class="race-title">Patou Skyrace</span><br>(22km 2200m d+) 2:31 --2<sup class="sup">nd</sup></li>
             <li class="results-list__item"><span class="race-title">Hautacam Trails</span><br>(22km 1650m d+) 2:08 --1<sup class="sup">st</sup></li>
             <li class="results-list__item"><span class="race-title">Bagneres Classic</span><br>(25km 1500m d+) 2:09 --1<sup class="sup">st</sup></li>
