--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
 </head>
 <body>
     <div class="page-wrapper">
+    <div class="preload-wrapper">
+    </div>
     <div class="hero-img-container">
         <div class="typography-container">
             <h1 class="header">Ben<br>Dhiman</h1>
@@ -41,6 +43,7 @@
             </nav>
     </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="./js files/home.js"></script>
 </body>
