--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
 <body>
     <div class="page-wrapper">
     <div class="preload-wrapper">
+        <div class="bars-wrap">
+        <div class="bars-9"></div>
+        </div>
     </div>
     <div class="hero-img-container">
         <div class="typography-container">
