--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
             <h2 class="header__subhead">&nbsp;</h2>
         </div>
         <a class="icon-link" href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i></a>
+        <a class="icon-link" href="https://open.spotify.com/user/bdhiman244?si=089d80b951af4fca" target="_blank"><i class="fa-brands fa-spotify spotify-icon"></i></a>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
