--- a/home.html
+++ b/home.html
@@ -28,11 +28,15 @@
             <h2 class="header__subhead">&nbsp;</h2>
         </div>
         <div class="icon-container">
-            <a class="icon-link" href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i></a>
+            <a class="icon-link tooltip" href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i><span class="tooltip-text">@american_cheetah</span></a>
             
             <a class="icon-link tooltip" href="https://open.spotify.com/user/bdhiman244?si=089d80b951af4fca" target="_blank">
                 <i class="fa-brands fa-spotify spotify-icon"></i>
                 <span class="tooltip-text">Checkout my playlists</span>
+            </a>
+            <a class="icon-link tooltip" href="https://itra.run/RunnerSpace/DHIMAN.Ben/1409387" target="_blank">
+                <i class="fa-solid fa-person-running runner-icon"></i>
+                <span class="tooltip-text-three">ITRA runner profile</span>
             </a>
         </div>
             <nav class="nav">
