philo page update

--- a/philosophyMF.html
+++ b/philosophyMF.html
@@ -32,9 +32,7 @@
         </div>
     </header>
     <section class="section-one container col-right">
-        <p class="section-one-content">Because velocity begs and my blood boils with stagnation, I run because I must. I run for the joy and toil of it,
-        for the battle with space vast and gravity thick. I run for a flushness with the natural world and an instinct
-        going all the way back. In the face of all the world's whizzing, running is the truest expression of my being.</p>
+        <p class="section-one-content">Running is rhythm.<br>Speed is freedom.<br>Embrace the relentless uphill pursuit.</p>
         <img class="small-img tashi-img" src="/images/tashilabstatall.jpg" alt="himalayan snowy pass">
     </section>
     </div>
