--- a/RacingMF.html
+++ b/RacingMF.html
@@ -152,9 +152,11 @@
         <div class="img-box df">
         <img class="race-pic" src="./imgsBw/racing/gabizosBWthumb.jpg" alt="Lake with Mountains">
         <div class="results-box">
-            <ul class="results-list">
-                <li class="results-next-race">NEXT RACE</li>
-            </ul>
+        <ul class="results-list">
+            <li class="results-list__item">&nbsp;5<sup class="sup">th</sup>
+            </li>
+            <li class="results-list__item"><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp; 3:24</li>
+        </ul>
         </div>
         </div>
         <div class="race-text">
@@ -176,6 +178,11 @@
     <section class="race-one container">
         <div class="img-box df">
         <img class="race-pic" src="./imgsBw/racing/mountainflankBWthumb.jpg" alt="Lake with Mountains">
+        <div class="results-box">
+            <ul class="results-list">
+                <li class="results-next-race">NEXT RACE</li>
+            </ul>
+        </div>
         </div>
         <div class="race-text">
         <div class="race-header">
