--- a/philosophyMF.html
+++ b/philosophyMF.html
@@ -39,6 +39,9 @@
     <section class="container section-two">
         <img class="large-img aba-img" src="/imgsBw/abadablam.jpg" alt="the great mountain Aba Dablam">
     </section>
+    <section class="container section-three">
+        <p class="section-two-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nihil expedita suscipit labore illo quo praesentium, dignissimos dolore nostrum dolorem nulla officiis repellendus est tempora amet aspernatur architecto ipsum iure inventore harum odit. Dolorum, enim.</p>
+    </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="./js files/philosophyMF.js"></script>
 </body>
