--- a/philosophyMF.html
+++ b/philosophyMF.html
@@ -40,7 +40,7 @@
         <img class="large-img aba-img" src="/imgsBw/abadablam.jpg" alt="the great mountain Aba Dablam">
     </section>
     <section class="container section-three">
-        <p class="section-two-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nihil expedita suscipit labore illo quo praesentium, dignissimos dolore nostrum dolorem nulla officiis repellendus est tempora amet aspernatur architecto ipsum iure inventore harum odit. Dolorum, enim.</p>
+        <p class="section-two-content">I came to the world of trail running for the thrill of combining sport and adventure. As I have matured as an athlete, placing greater emphasis on performance, I remain romantically entangled with the call to adventure and the transformational power of an ultramarathon. Running is the medium, the madness, the natural expression of myself for which I am eternally greatful.</p>
     </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="./js files/philosophyMF.js"></script>
