add blog remove philosophy

--- a/RacingMF.html
+++ b/RacingMF.html
@@ -21,7 +21,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
             </ul>
@@ -169,8 +169,8 @@
                 <li>July 23</li>
                 <li>Arrens-Marsous</li>
                 <li>French Pyrenees</li>
-                <li><a class="race-details__link" href="https://www.lesgabizos.com/gabizosskyrace" target="_blank"><i
-                            class="fa-solid fa-typewriter typewriter-icon"></i>Race Website</a></li>
+                <li><a class="race-details__link" href="https://www.trails-endurance.com/actualites-courses-trail-running/gabizos-trail-2022" target="_blank"><i
+                            class="fa-solid fa-typewriter typewriter-icon"></i>Endurance Mag Article</a></li>
             </ul>
         </div>
         </div>
