--- a/Results.html
+++ b/Results.html
@@ -21,7 +21,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
-                <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
             </ul>
         </nav>
