--- a/home.html
+++ b/home.html
@@ -46,7 +46,9 @@
                         <a href="/RacingMF.html" class="nav__link">racing</a></li>
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
-                        <a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                        <!-- <a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                    <li class="nav__item"> -->
+                        <a href="/blogHome.html" class="nav__link">Blog</a></li>
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
                         <a href="/Results.html" class="nav__link">Results</a></li>
