--- a/blogHome.html
+++ b/blogHome.html
@@ -31,6 +31,17 @@
         </header>
         <div class="blog-article-container container">
             <div class="frame">
+            <a class="blog-link" href="/blogTrainForm.html">
+                <div class="blog-entry">
+                    <img class="blog-thumbnail" src="/images/blog-photos/blogpostthumb.jpg" alt="Runner at the Gabizos Skyrace">
+                    <div class="article-date">
+                       30-08-22
+                    </div>
+                        <div class="article-title">
+                            <h2>Sea of Clouds<br>A Training Block Review</h2>
+                    </div>
+                </div>
+            </a>
             <a class="blog-link" href="/blogBoiler.html">
                 <div class="blog-entry">
                     <img class="blog-thumbnail" src="/images/blog-photos/gabizos-blog-thumb.jpg" alt="Runner at the Gabizos Skyrace">
