--- a/blogTrainForm.html
+++ b/blogTrainForm.html
@@ -131,8 +131,8 @@
             </div>
             <div class="content-paragraph-subhead">Last Word</div>
             Given what I accomplished this month I think I am well-prepared for the Canfranc-Canfranc 100km, the only session I
-            missed (no-trivial one) was a 10-12hr day. Just couldn't swing it. The plan is to use the CC race as final prep for the Grand Raid. <br><br>During this training block I've been pleased to see that the body can adapt to higher volume and discomfot. The best part of the training was likely the copious eating, salted-carmel twix bars, 4-egg breakfast, rare meat and crunchy vegetables. It also meant more solemn discussions with the moon more respiration, perspiration, more
-            life out of doors--which must be the reason we run trails.
+            missed (no-trivial one) was a 10-12hr day. Just couldn't swing it. The plan is to use the CC race as final prep for the Grand Raid. <br><br>During this training block I've been pleased to see that the body can adapt to higher volume and discomfort. The best part of the training was likely the copious eating, salted-carmel twix bars, 4-egg breakfast, rare meat and crunchy vegetables. It also meant more solemn discussions with the moon more respiration, perspiration, more
+            life out of doors--the chief raison d'etre for trail running.
             <br><br>
             <img class="blog-photo-landscape" src="./images/blog-photos/picdumidisqaure.jpg"
                 alt="Pic du midi with creeping clouds"><br><br>
