--- a/home.html
+++ b/home.html
@@ -38,6 +38,10 @@
                 <i class="fa-solid fa-person-running runner-icon"></i>
                 <span class="tooltip-text-three">ITRA runner profile</span>
             </a>
+            <a class="icon-link tooltip" href="https://www.strava.com/athletes/102936151" target="_blank">
+                <i class="fa-brands fa-strava strava-icon"></i>
+                <span class="tooltip-text-four">Strava profile</span>
+            </a>
         </div>
             <nav class="nav">
                 <ul class="nav__list">
