--- a/Results.html
+++ b/Results.html
@@ -34,6 +34,8 @@
         <ul class="results__list">
             <li class="list__title">Races</li>
             <li class="results-list__year">2022</li>
+            <li class="results-list__item"><span class="race-title">Canfranc-Canfranc</span><br>(102km 8848m d+) 18:28 --1<sup class="sup">st</sup>
+            </li>
             <li class="results-list__item"><span class="race-title">Les Gabizos Skyrace</span><br>(31km 2400m d+) 3:24 --5<sup class="sup">th</sup></li>
             <li class="results-list__item"><span class="race-title">GTVO</span><br>(74km 4600m d+) 8:30 --1<sup class="sup">st</sup></li>
             <li class="results-list__item"><span class="race-title">Patou Skyrace</span><br>(22km 2200m d+) 2:31 --2<sup class="sup">nd</sup></li>
