new blog article

--- a/blogHome.html
+++ b/blogHome.html
@@ -31,6 +31,17 @@
         </header>
         <div class="blog-article-container container">
             <div class="frame">
+            <a class="blog-link" href="/blogCcRaceReport.html">
+                <div class="blog-entry">
+                    <img class="blog-thumbnail" src="/images/blog-photos/ccthumbnail.jpg" alt="Pyrenees Mountains">
+                    <div class="article-date">
+                       15-09-22
+                    </div>
+                        <div class="article-title">
+                            <h2>Canfranc-Canfranc<br>Race Report</h2>
+                    </div>
+                </div>
+            </a>
             <a class="blog-link" href="/blogTrainForm.html">
                 <div class="blog-entry">
                     <img class="blog-thumbnail" src="/images/blog-photos/blogpostthumb.jpg" alt="Runner at the Gabizos Skyrace">
