--- a/blogCcRaceReport.html
+++ b/blogCcRaceReport.html
@@ -46,7 +46,7 @@ sense of looming adventure. The plan was to keep the pace comfortable, respect t
 a decent time. <br><br>
     </div>
     <div class="container">
-        <img src="./images/blog-photos/CanCan profile.jpeg" alt="Race topographic map"><br><br>
+        <img src="./images/blog-photos/CanCan profile.jpeg" alt="Race topographic map"><span class="caption"><a target="_blank" href="https://www.strava.com/activities/7788570815" class="quiet-link">Check out my Strava activity</a></span><br><br>
     </div>
     <div class="content-paragraph container">
         <div class="content-paragraph-subhead">Shaky Start</div>
