--- a/RacingMF.html
+++ b/RacingMF.html
@@ -214,6 +214,13 @@
     <section class="race-one container">
         <div class="img-box df">
         <img class="race-pic" src="./imgsBw/racing/mafateBWthumb.jpg" alt="Lake with Mountains">
+        <div class="results-box">
+            <ul class="results-list">
+                <li class="results-list__item"><i class="fa-solid fa-trophy trophy-icon-third"></i>&nbsp;3<sup class="sup">rd</sup>
+                </li>
+                <li class="results-list__item"><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp; 24:20</li>
+            </ul>
+        </div>
         </div>
         <div class="race-text">
         <div class="race-header">
