--- a/Results.html
+++ b/Results.html
@@ -43,6 +43,8 @@
         <ul class="results__list">
             <li class="list__title">Races</li>
             <li class="results-list__year">2022</li>
+            <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>(165km 10200m d+) 24:20 --3<sup class="sup">rd</sup>
+            </li>
             <li class="results-list__item"><span class="race-title">Canfranc-Canfranc</span><br>(102km 8848m d+) 18:28 --1<sup class="sup">st</sup>
             </li>
             <li class="results-list__item"><span class="race-title">Les Gabizos Skyrace</span><br>(31km 2400m d+) 3:24 --5<sup class="sup">th</sup></li>
