--- a/blogHome.html
+++ b/blogHome.html
@@ -40,6 +40,17 @@
         </header>
         <div class="blog-article-container container">
             <div class="frame">
+                <a class="blog-link" href="/blogGRR.html">
+                    <div class="blog-entry">
+                        <img class="blog-thumbnail" src="/images/blog-photos/grrblogreportthumbnail.jpg" alt="Col Aubisque photo">
+                        <div class="article-date">
+                            29-10-22
+                        </div>
+                        <div class="article-title">
+                            <h2>Breaking<br>Through:<br>Grand Raid Reunion</h2>
+                        </div>
+                    </div>
+                </a>
             <a class="blog-link" href="/blogCcRaceReport.html">
                 <div class="blog-entry">
                     <img class="blog-thumbnail" src="/images/blog-photos/ccthumbnail.jpg" alt="Pyrenees Mountains">
