--- a/blogGRR.html
+++ b/blogGRR.html
@@ -123,10 +123,12 @@
         and follow my friends just two minutes ahead. At this point I decide to bank energy, move efficiently
         to Grand Chalupe and from there make a move. Darkness falls. I catch Courtney on the descent, she tells me to go for it.
         I'm obliged.<br><br>
-           
+            <div class="df-center">
+                <img class="blog-photo-tall" src="./images/blog-photos/lapossession.jpg" alt="Finish line DDF"><br><br>
+            </div>
             <div class="content-paragraph-subhead">Objective #4: Always Finish Strong</div>
         I see Serge at the Chalupe ravito (154km) and we share words of encouragement before I decide to barrel ahead. As soon as the
-        steep bit is done I start to run. Most of me wants to hike but I say no in thunder (thank you Jim Harrison <a href="https://www.poetryfoundation.org/poetrymagazine/poems/51602/barking-56d22f730de00" target="_blank" class="cpation">see poem</a>). I ran nearly every step of the last climb, as if it were one long scroll on
+        steep bit is done I start to run. Most of me wants to hike but I say no in thunder (thank you Jim Harrison <a class="casual-link" href="https://www.poetryfoundation.org/poetrymagazine/poems/51602/barking-56d22f730de00" target="_blank" class="cpation">see poem</a>). I ran nearly every step of the last climb, as if it were one long scroll on
         which I scrawled, “I will the will to run. I am here, only here, I will the will to run,” over
         and over. The effect was significant and I made a good gap and launched into the descent with the plan to keep pushing.
         There were two other races finishing via the same tight, technical path and traffic jams encumbered me.
@@ -146,6 +148,9 @@
             My progression this year has been on a good trajectory. This is the thing I've been trying to do well for so
             long. With hard work and devotion and drive I've given myself the chance to succeed. But I intend to keep climbing, who
             knows where the ceiling hangs and how fragile it is.<br><br>
+            <div class="df-center">
+                <img class="blog-photo-tall" src="./images/blog-photos/yellowjersey.jpg" alt="Finish line DDF">
+            </div><br><br>
             <div class="bottom-nav">
                 <a class="nav__link boost-font" href="./blogHome.html"><i class="fa-solid fa-ellipsis"></i>&nbsp;Blog
                     Home</a>
