--- a/blogGRR.html
+++ b/blogGRR.html
@@ -64,7 +64,7 @@
         little blip contributed to the elite field being cut in half as people folded.<br><br>
         <div class="df-center">
             <img class="blog-photo-tall" src="./images/blog-photos/aidstationvibes.jpg" alt="Aid station at night">
-        </div><br>Out of Mare à Boue (52km) I got
+        </div><span class="photo-credit-offical">Photo credits:&nbsp;<a class="casual-link" href="https://www.anthonyderoeux.com/" target="_blank">Anthony Deroeux</a></span><br><br>Out of Mare à Boue (52km) I got
         passed by Courtney Dauwalter, one of the best in the sport, whose notoriety for eviscerating competition both male and
         female is renown. I stuck to and we navigated the treacherous 'chutes and ladders' section together. Think mist-slicked
         obstacle course of boulders threaded with the occasional ladder tending uphill but plugged with gnarly
