--- a/blogGRR.html
+++ b/blogGRR.html
@@ -78,7 +78,7 @@
         </div><br>
             <div class="content-paragraph-subhead">Objective #2: Mission Mafate / Allez Avance!</div>
         Courtney and I cut up Col du Taibit in good time, passing Maxime Cazajous, a powerful runner hailing from my neck of the woods in
-        the Pyrenees, and Germain Grangier, another Frenchman with a pile of outstanding results in big races. What a privilege
+        the Pyrenees, and Germain Grangier (aka Serge), another Frenchman with a pile of outstanding results in big races. What a privilege
         it was to run among such great athletes and better yet be smashing one of the biggest climbs of the course. I took the
         descent easy, heard a blood curdling scream from behind so stupefying I thought Courtney had been attacked by a
         shark. She confirmed she was ok after taking a fall so I rolled into Marla (86km) in third position.<br><br>
@@ -90,7 +90,7 @@
             slices. Again I would be without crew for 9hrs+ so was carrying nutrition and sure to fuel and drink every chance I got. This is Mafate. Mistakes can be lethal. The news that the lead duo Beñat Marmisolle
             and Jean-Philippe Tschumi were 40mins ahead meant a round of applause. We were four runners Maxime, Germain,
             Courtney and myself, within two minutes of each other but switching positions. <br><br>Maxime and I did most of the heavy
-            lifting to Grand Place (107km). Third at the Diag in 2018, Maxime was descnding well but starting to look
+            lifting to Grand Place (107km). Third at the Diag in 2018, Maxime was descending well but starting to look
             haggard on the climbs and after the ascent from Grand Place we no longer saw him. The only climb where I truly suffered was up to Roche Plate. Serge tells me
             its 600m positive, I claim that's an impossibility! It never ends. Its hot and steep and mysterious, and also the last bit of a long stretch between aid stations and we were dry. Rather rough, but no death blows were dealt.<br><br>
             <img class="blog-photo-landscape" src="./images/blog-photos/forestrunningmafate.jpg"
