change insta handle

--- a/contactMF.html
+++ b/contactMF.html
@@ -44,7 +44,7 @@
             <ul class="contact-list">
                  <li class="contact-list-item"><i class="fa-solid fa-envelope contact-icon"></i><br>bdhiman244@gmail.com</li>
                 <li class="contact-list-item"><i class="fa-solid fa-phone contact-icon"></i><br>+33 672 4353 28</li>
-                <li class="contact-list-item"><i class="fa-brands fa-instagram contact-icon"></i><br><a class="contact-list-link" href="https://www.instagram.com/american_cheetah/" target="_blank">@american_cheetah</a></li>
+                <li class="contact-list-item"><i class="fa-brands fa-instagram contact-icon"></i><br><a class="contact-list-link" href="https://www.instagram.com/ben_dhiman/" target="_blank">@ben_dhiman</a></li>
             </ul>
  
             <img class="curly-brace" src="https://upload.wikimedia.org/wikipedia/commons/5/51/AccoladeGaBis.svg" alt="curly-brace">
