--- a/blogGRR.html
+++ b/blogGRR.html
@@ -31,7 +31,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
@@ -65,7 +65,7 @@
         <div class="df-center">
             <img class="blog-photo-tall" src="./images/blog-photos/aidstationvibes.jpg" alt="Aid station at night">
         </div><span class="photo-credit-offical">Photo credits:&nbsp;<a class="casual-link" href="https://www.anthonyderoeux.com/" target="_blank">Anthony Deroeux</a></span><br><br>Out of Mare à Boue (52km) I got
-        passed by Courtney Dauwalter, one of the best in the sport, whose notoriety for eviscerating competition both male and
+        passed by Courtney Dauwalter, one of the best in the sport, renown whose notoriety for eviscerating competition both male and
         female is renown. I stuck to and we navigated the treacherous 'chutes and ladders' section together. Think mist-slicked
         obstacle course of boulders threaded with the occasional ladder tending uphill but plugged with gnarly
         watch-your-ass divots. She said her goal was to “not get injured on the descents." Prudence over performance.
