--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
             <h2 class="header__subhead">&nbsp;</h2>
         </div>
         <div class="icon-container">
-            <a class="icon-link tooltip" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i><span class="tooltip-text">@american_cheetah</span></a>
+            <a class="icon-link tooltip" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i><span class="tooltip-text">@ben_dhiman</span></a>
             
             <a class="icon-link tooltip" href="https://open.spotify.com/user/bdhiman244?si=089d80b951af4fca" target="_blank">
                 <i class="fa-brands fa-spotify spotify-icon"></i>
