--- a/blogCcRaceReport.html
+++ b/blogCcRaceReport.html
@@ -31,7 +31,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
+                <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
