--- a/BlogRetrospective.html
+++ b/BlogRetrospective.html
@@ -49,7 +49,7 @@
             </ul>
         </div> -->
         <div class="content-paragraph container has-dropcap">
-        Notwithstanding some episode of self-transcendence, results are a function of preparation. After a string of
+        Notwithstanding some episode of self-transcendence, <span class="italics">results are a function of preparation.</span> After a string of
         underwhelming results in 2021, I gave myself an ultimatum: perform or knock it off. Its a team effort now that I have a family. We sacrfrifice a great deal to my ambition, so its only natural I demmand the best of myself.<br>
         </div>
         <div class="content-paragraph container">
@@ -163,7 +163,7 @@
             I raced seven times with a total of 440km with 31400m of climb. The most important metric was the general upward trend in the quality of my results. In retrospect I would substitute early-season short races for one or two at marathon/50k distance. The finale of Canfranc-Canfranc to the Grand Raid was perfect. In each race I learned something, so I have no regrets, but in the future I plan on asking myself why for each race, how does it fit in with the training scheme and lend itself to the year's primary objectives?<br><br>
                
             <div class="content-paragraph-subhead">Training Approach Summary</div>
-       This year revealed a lot to me. I have plenty to work on but plenty of potential. If I had to point my finger at one thing which enabled me to achieve a world-class result at the Grand Raid it would be my unrelenting
+       This year revealed a lot to me. Work to do but plenty of potential. If I had to point my finger at one thing which enabled me to achieve a world-class result at the Grand Raid it would be my unrelenting
         consistency. Life is hard on the training, training is hard on the body, there were so many days when I had to just
         force the session, clawing my way toward a distant dream of success.
             <br><br>
