--- a/BlogRetrospective.html
+++ b/BlogRetrospective.html
@@ -115,7 +115,7 @@
         I reserved the stationary bike for recovery weeks and did minimal weight work, mostly general strength stuff like lunges, squats, and kettle bell exercises. I did one long run a month between 30-40km, usually outside with climbing. If possible I would substitute treadmill hiking for a heavy carry up the mountain, toting 15L of water up 1000m and dumping it for the descent.<br><br>
         <img src="./images/blog-photos/actionshotSpring2.jpg" alt="running uphill">
             <div class="content-paragraph-subhead">Spring</div>
-            Spring spells consistency, over four months I took 8 days off including 5 consecutive with a bad case of covid. Come march I arrived at 'cruising altitude', 160km/week. I did not want to continue ramping volume so changed tactics.<br>
+            Spring spells consistency, over four months I took 8 days off including 5 consecutive with a bad case of covid. Come march I arrived at 'cruising altitude', 160km/week. I did not want to continue ramping volume so changed tactics. Once the snow melted out I dropped the gym pass and ran exclusivly in the hills.<br>
             <div class="table-container">
             <table class="table">
                 <caption>March 2022</caption>
