--- a/BlogRetrospective.html
+++ b/BlogRetrospective.html
@@ -49,7 +49,7 @@
             </ul>
         </div> -->
         <div class="content-paragraph container has-dropcap">
-        Notwithstanding some episode of self-transcendence, <span class="italics">results are a function of preparation.</span> After a string of
+        Barring some episode of self-transcendence, <span class="italics">results are a function of preparation.</span> After a string of
         underwhelming results in 2021, I gave myself an ultimatum: perform or knock it off. Its a team effort now that I have a family. We sacrfrifice a great deal to my ambition, so its only natural I demmand the best of myself.<br>
         </div>
         <div class="content-paragraph container">
