--- a/blogHome.html
+++ b/blogHome.html
@@ -40,6 +40,18 @@
         </header>
         <div class="blog-article-container container">
             <div class="frame">
+                
+                <a class="blog-link" href="/blogAerobicBase.html">
+                    <div class="blog-entry">
+                        <img class="blog-thumbnail" src="/images/blog-photos/spirit warrior-thumb.jpg" alt="clouds swirling">
+                        <div class="article-date">
+                            12-11-22
+                        </div>
+                        <div class="article-title">
+                            <h2>Get Elevated:<br>Aerobic Build</h2>
+                        </div>
+                    </div>
+                </a>
                 <a class="blog-link" href="/BlogRetrospective.html">
                     <div class="blog-entry">
                         <img class="blog-thumbnail" src="/images/blog-photos/thumbnailRetro.jpg" alt="clouds swirling">
